[package]
name = "js-api"
version = "0.1.0"
edition = "2021"

[dependencies]
jsi = { path = "../jsi" }
jsi-macros = { path = "../jsi-macros" }

url = "2.2.2"
uuid = { version = "1.1", features = ["v4", "serde"] }
log = "0.4"
cxx = "1.0"
futures = "0.3.19"
serde = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
lazy_static = "1.4"
parking_lot = "0.12.0"
