[package]
name = "jsi-macros"
version = "0.3.1-alpha.5"
edition = "2021"
license = "MIT"
description = "Support macros for jsi-rs"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
repository = "https://github.com/laptou/jsi-rs/"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["full", "quote"] }

[features]
host-object-trace = []
