[package]
name = "jsi-sys"
version = "0.3.0-alpha.5"
edition = "2021"
links = "jsi"
license = "MIT"
description = "Low-level interface to React Native JSI"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
repository = "https://github.com/laptou/jsi-rs/"

exclude = [
  "vendor/hermes"
]

[dependencies]
cxx = "1.0"
anyhow = "1.0"

[build-dependencies]
cxx-build = "1.0"
dunce = "1.0"
