[package]
name = "jsi"
version = "0.3.0"
edition = "2021"

[dependencies]
jsi-sys = { path = "../jsi-sys" }
jsi-macros = { path = "../jsi-macros", optional = true }
cxx = "1.0"
anyhow = "1.0"
log = { version = "0.4", optional = true }
better_any = "0.2"

[features]
default = []
host-fn-trace = ["log"]
js-fn-trace = ["log"]
call-invoker-trace = ["log"]
macros = ["jsi-macros"]
