[package]
name = "jsi"
version = "0.3.0-alpha.5"
edition = "2021"
license = "MIT"
description = "Write React Native JSI modules in Rust"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
repository = "https://github.com/laptou/jsi-rs/"

[dependencies]
jsi-sys = { path = "../jsi-sys", version = "0.3.0-alpha.5" }
jsi-macros = { path = "../jsi-macros", version = "0.3.1-alpha.5", optional = true }
cxx = "1.0"
anyhow = "1.0"
log = { version = "0.4", optional = true }
better_any = "0.2"
serde = { version = "1.0", optional = true }
thiserror = "1.0.47"

[features]
default = ["macros", "serde"]
host-fn-trace = ["log"]
js-fn-trace = ["log"]
call-invoker-trace = ["log"]
macros = ["jsi-macros"]
serde = ["dep:serde"]
